--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,11 @@ frontend/logs
 frontend/node_modules
 frontend/bower_components
 
+new_model/data
+new_model/output/distance
+new_model/output/distance_angles
+
+data/
 *.sublime*
 
 psd
