--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-    "node-sass": "^7.0.1",
+    "sass": "^1.50.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-responsive": "^9.0.0-beta.6",
